fixed menu, if u click then it closes and fixed some spacing on mobile

--- a/MiYou.Web/src/app/components/pricing and templates/pricing-and-templates.component.scss
+++ b/MiYou.Web/src/app/components/pricing and templates/pricing-and-templates.component.scss
@@ -1,10 +1,9 @@
 .pricing-content {
     display: flex;
-    width: 100%;
-    height: 100%;
     flex-direction: column;
     gap: 3%;
     align-items: center;
+    padding-bottom: 1rem;
 }
 
 .title {
@@ -40,7 +39,8 @@
     font-weight: 600;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     padding-bottom: 1rem;
-    margin-bottom: 1.5rem;
+    padding-top: 1rem;
+
     text-align: center;
 }
 
